{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "1dbf2a5d-be46-45fe-9570-b234d63631e5",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "c81079b5-b8d7-454a-9e92-ce224c0f0cc8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LMB",
                    "type": "Button",
                    "id": "63d914bb-b65d-447f-a345-edbf9af14c8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "65785e1a-9f81-41d2-8968-095178624e39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b0b4b9f-8499-4b06-83e2-842c326ed20d",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0545ab54-7ccf-49f1-933a-fa8b84f2a21b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2883c4f2-c200-4ae1-a059-524e0181b5fc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}